--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -2,15 +2,15 @@ extends ./../partials/head
 block content
   .all-wrapper
     .all-header
-      .main-logo
+      a.main-logo(href="/")
         span Act'IN
         span School
       .header-bar
         a(href="/").header-bar-each 
           span Hakkımızda
-        a(href="/").header-bar-each 
+        a(href="/auth/school/login").header-bar-each 
           span Yönetim Girişi
-        a(href="/").header-bar-each
+        a(href="/auth/school/register").header-bar-each
           span Yeni Okul Başvurusu
       .login-wrapper
         a.login-button(href="/auth/login") Giriş Yap
