--- a/public/css/auth/register.css
+++ b/public/css/auth/register.css
@@ -56,15 +56,15 @@
   width: 100%;
   height: 8vh;
   border-radius: 15px;
-  background-color: rgb(230, 219, 201);
+  background-color: rgb(248, 248, 248);
+  border: 2px solid rgb(236, 235, 235);
   cursor: pointer;
-  border: none;
-  font-size: 125%;
+  font-size: 150%;
   color: rgb(64, 64, 64);
-  font-weight: 600;
+  font-weight: 700;
 }
 .form-send-button:hover {
-  box-shadow: 0px 1px 1px rgba(230, 219, 201, 0.5);
+  box-shadow: 0px 1px 1px rgba(236, 235, 235, 0.5);
 }
 
 .school-input-values {
@@ -76,7 +76,7 @@
   margin-top: -3.7vh;
   border: 2px solid rgb(236, 235, 235);
   border-top: 0px;
-  height: 20vh;
+  height: 10vh;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
 }
@@ -86,7 +86,8 @@
   color: rgb(112, 112, 112);
   font-family: "Source Sans Pro";
   min-height: 4vh;
-  padding-left: 5px;
+  padding-left: 10px;
+  padding-top: 5px;
   cursor: pointer;
 }
 .school-input-values span:hover {
