--- a/public/css/console.css
+++ b/public/css/console.css
@@ -37,62 +37,80 @@ body {
 
 .all-header {
   flex: 1;
-  padding-left: 2%;
-  padding-top: 3%;
-  background-color: white;
-  border-right: 2px solid rgb(236, 236, 236);
+  background-color: rgb(119, 136, 153);
   display: flex;
   flex-direction: column;
 }
-.main-logo {
-  margin-bottom: 5%;
-  font-size: 200%;
-  color: rgb(64, 64, 64);
-  font-weight: 700;
+
+.header-user-wrapper {
+  padding: 20px;
+  padding-bottom: 60px;
+  padding-right: 0px;
   display: flex;
   flex-direction: column;
+}
+.header-logo-wrapper {
+  width: 50%;
+  display: flex;
   justify-content: center;
-  text-decoration: none;
+  align-items: center;
+  border-radius: 50%;
+  border: 2px solid white;
 }
-.main-logo span {
-  height: 30px;
+.header-logo {
+  width: 100%;
+  border-radius: 50%;
+}
+.header-user-name {
+  color: white;
+  font-size: 125%;
+  font-weight: 600;
+  margin-top: 20px;
+}
+.header-user-explanation {
+  color: white;
+  font-size: 100%;
+  font-weight: 400;
 }
 
 .header-bar {
   display: flex;
   flex-direction: column;
 }
-.header-bar-title {
-  border-bottom: 2px solid rgb(236, 236, 236);
-  font-size: 150%;
-  color: rgb(64, 64, 64);
-  font-weight: 600;
-  margin-top: 15%;
-}
 .header-bar-each {
   width: auto;
   text-decoration: none;
-  color: rgb(64, 64, 64);
+  color: white;
+  font-size: 100%;
+  font-weight: 700;
+  padding: 20px 0%;
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+}
+.header-bar-each i {
   font-size: 125%;
-  font-weight: 400;
-  padding-top: 20px;
 }
 .header-bar-each span {
   margin-left: 10px;
 }
+.header-bar-each-selected {
+  background-color: #536872;
+}
 .header-bar-each:hover {
-  text-decoration: underline;
+  background-color: #536872;
 }
 
 .copyright-wrapper {
   margin-top: auto;
-  margin-bottom: 10%;
-  color: rgb(64, 64, 64);
+  margin-bottom: 20px;
+  margin-left: 20px;
+  color: white;
   font-size: 100%;
-  font-weight: 300;
+  font-weight: 600;
 }
 
 .all-content {
-  flex: 5;
-  /* background-color: rgb(140, 188, 208); */
+  flex: 4;
+  background-color: white;
 }
