--- a/views/school/dashboard.pug
+++ b/views/school/dashboard.pug
@@ -1,13 +1,31 @@
 extends ./../partials/consoleHeader
 block main
-  .all-content-inner
-    .all-content-header
-      .all-content-header-left
+  .image-wrapper
+    img.all-content-image(src="https://images.unsplash.com/photo-1508873699372-7aeab60b44ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80")
+  .all-content-inner-wrapper
+    .empty-wrapper
+    .color-wrapper
+      .all-content-header
         .school-logo-wrapper
-          img(src=school.profilePhoto)
-      .all-content-header-right
+          img.school-logo(src=school.profilePhoto)
         span.school-name= school.name
-        span.school-info Kayıtlı Öğrenci Sayısı: #{school.users.length}
-        span.school-info Üyelik Tarihi: #{school.createdAt}
-    .clubs-wrapper
-      
+      .info-wrapper
+        .each-info
+          span.each-info-title Üyelik Tarihi: 
+          span.each-info-content= school.createdAt
+        .each-info
+          span.each-info-title E-Posta Adresi: 
+          span.each-info-content= school.email
+        .each-info
+          span.each-info-title Telefon Numarası: 
+          span.each-info-content= school.phone
+        .each-info
+          span.each-info-title Kayıtlı Öğrenci Sayısı: 
+          span.each-info-content= school.users.length
+        .each-info
+          span.each-info-title Aktif Kulüp Sayısı: 
+          span.each-info-content= school.clubs.length
+      .explanation-wrapper
+        span.explanation Yandaki menüyü kullanarak aktif öğrenci ya da kulüp hesaplarını inceleyebilir ve düzenleyebilirsiniz. Ayrıca okul hesabınız ile ilgili verdiğiniz bilgileri ayarlar sayfasından güncelleyebilirsiniz. Eğer sistemin kullanılması ile ilgili herhangi bir sorunuz olursa iletişim sayfasından bize danışabilirsiniz. İyi günler dileriz.
+        span.explanation-signature ~ Act'IN School Ekibi
+          
