--- a/views/school/dashboard.pug
+++ b/views/school/dashboard.pug
@@ -1,7 +1,7 @@
 extends ./../partials/consoleHeader
 block main
   .image-wrapper
-    img.all-content-image(src="https://images.unsplash.com/photo-1508873699372-7aeab60b44ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80")
+    img.all-content-image(src="/res/images/school_dashboard_image.jpeg")
   .all-content-inner-wrapper
     .empty-wrapper
     .color-wrapper
