--- a/public/css/general.css
+++ b/public/css/general.css
@@ -11,7 +11,6 @@ html {
   padding: 0px;
   overflow: hidden;
   height: 100%;
-	background: rgb(253, 253, 253);
 	background-size: cover;
 }
 body {
@@ -25,9 +24,35 @@ body {
   overflow: hidden;
 }
 
+.background-image-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+}
+.background-image {
+  position: absolute;
+  width: 100vw;
+  min-height: 100vh;
+  transform: rotate(180deg);
+  z-index: -2;
+}
+.background-shape {
+  background-color: rgba(87, 77, 101, 0.6);
+  width: 100vw;
+  height: 100vw;
+  transform: translate(-50%, -50%);
+  border-radius: 100%;
+  z-index: -1;
+  position: absolute;
+}
+
 .all-wrapper {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
 }
 .display-none {
@@ -35,36 +60,116 @@ body {
 }
 
 .all-header {
-  height: 10vh;
-  width: 100vw;
-  background-color: rgb(248, 248, 248);
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
+  flex: 1;
   display: flex;
   align-items: center;
-  padding: 0% 40px;
-  position: absolute;
+  padding: 0px 40px;
   z-index: 2;
 }
 
-.header-bar-each {
+.all-header-responsive {
+  display: none;
+  padding: 0px 20px;
+  align-items: center;
+}
+
+.header-logo-wrapper {
+  display: flex;
+  flex-direction: column;
+  color: rgb(241, 242, 238);
+  font-size: 175%;
+  font-weight: 800;
+  line-height: 100%;
   text-decoration: none;
-  margin-right: 20px;
-  color: #276FBF;
+  cursor: pointer;
+}
+
+.header-bar-wrapper {
+  display: flex;
+  align-items: center;
+  margin-left: 40px;
+}
+.header-bar-each {
+  color: rgb(241, 242, 238);
   font-size: 125%;
+  text-decoration: none;
+  margin-right: 10px;
   font-weight: 600;
 }
 .header-bar-each:hover {
-  color: #183059;
+  text-decoration: underline;
+}
+
+.header-login-wrapper {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  width: auto;
+}
+.header-login-button {
+  margin-right: 10px;
+  width: 100px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(241, 242, 238);
+  box-shadow: 0 3px 3px rgba(87, 77, 101, 0.6);
+  font-size: 125%;
+  color: rgb(87, 77, 101);
+  font-weight: 600;
+  text-decoration: none;
+}
+.header-login-button:hover {
+  box-shadow: 0 4px 4px rgba(87, 77, 101, 0.6);
+}
+.header-register-button {
+  width: 100px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(87, 77, 101);
+  box-shadow: 0 3px 3px rgba(87, 77, 101, 0.6);
+  font-size: 125%;
+  color: rgb(241, 242, 238);
+  font-weight: 600;
+  text-decoration: none;
+}
+.header-register-button:hover {
+  box-shadow: 0 4px 4px rgba(87, 77, 101, 0.6);
 }
 
 .all-content {
-  background-color: rgb(246, 244, 243);
-  width: 100vw;
-  height: 100vh;
+  flex: 8;
 }
 
-/* 
-background color: rgb(250, 253, 246)
-header color: rgb(94, 80, 63)
+@media only screen and (orientation: portrait) {
+  .background-image {
+    height: 100vh;
+    width: auto;
+  }
+  .background-shape {
+    width: 200vw;
+    height: 200vw;
+  }
+  .all-header {
+    padding: 0px 20px;
+  }
+  .header-bar-wrapper {
+    display: none;
+  }
+  .all-header-responsive {
+    display: flex;
+  }
+}
 
-*/
+@media only screen and (max-width: 500px) and (min-width: 300px) {
+  .header-bar-each {
+    font-size: 100%;
+  }
+  .header-login-button, .header-register-button {
+    font-size: 100%;
+    width: 80px;
+  }
+}
