--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="tr")
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
-    title Act'in School | #{title}
+    title ACT'IN school | #{title}
     if includes && includes.external
       if includes.external.indexOf('fontawesome') > -1
         link(rel="stylesheet",
