--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,7 +1,28 @@
 extends ./../partials/head
 block content
+  .background-image-wrapper
+    image.background-image(src="/res/images/landing_page_image.jpg")
+  .background-shape
   .all-wrapper
     .all-header
+      a.header-logo-wrapper(href="/")
+        span ACT'IN
+        span school
+      .header-bar-wrapper
+        a.header-bar-each(href="/aboutus")
+          span Hakkımızda
+        a.header-bar-each(href="/contact")
+          span İletişim
+        a.header-bar-each(href="/auth/school/register")
+          span Başvur
+        a.header-bar-each(href="/auth/school/login")
+          span Yönetici Girişi
+      .header-login-wrapper
+        a.header-login-button(href="/auth/login")
+          span Giriş Yap
+        a.header-register-button(href="/auth/register")
+          span Üye Ol
+    .all-header-responsive
       a.header-bar-each(href="/aboutus")
         span Hakkımızda
       a.header-bar-each(href="/contact")
@@ -9,9 +30,6 @@ block content
       a.header-bar-each(href="/auth/school/register")
         span Başvur
       a.header-bar-each(href="/auth/school/login")
-        span Admin Girişi
-      a.header-bar-each(href="/auth/login")
-        span Giriş
-    
+        span Yönetici Girişi
     .all-content
       block main
