--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,5 +1,6 @@
 extends ./../partials/header
 block main
+  .background-shape.buble-start-animation-class
   form.all-content-login-wrapper(action="/auth/login" method="POST")
     span.all-content-header Öğrenci Girişi
     .form-line
