--- a/views/index/index.pug
+++ b/views/index/index.pug
@@ -1,2 +1,7 @@
 extends ./../partials/header
 block main
+  .background-shape.buble-start-animation-class
+  span.main-header Lise ve üniversite kulüpleri için profesyonel bir yönetim platformu
+  span.main-content ACT'IN school ile beraber kulübünü gelişen yeni dünyaya hazır hale getir. İhtiyaç duyabileceğin her şey şimdi parmağının ucunda. Keşfet!
+  a.register-button(href="/auth/register")
+    span Şimdi Başla
